--- a/index.html
+++ b/index.html
@@ -1,49 +1,110 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>首页</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/main.css">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <title>Browser Gallery</title>
 
+    <!-- Bootstrap -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
 
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+    <script src="js/html5shiv.js"></script>
+    <script src="js/respond.min.js"></script>
+    <![endif]-->
+    <style>
+        html {
+            margin: 0;
+            padding: 0;
+        }
+
+        body {
+            padding-top: 50px;
+        }
+
+        .carousel {
+            height: 580px;
+            background-color: #000;
+            margin-bottom: 60px;
+        }
+
+        .carousel .item {
+            height: 580px;
+            background-color: #000;
+        }
+
+        .carousel img {
+            width: 100%;
+        }
+
+        .carousel-caption p {
+            font-size: 20px;
+            border-bottom: 20px;
+        }
+
+        .carousel-caption:nth-child(3) {
+            bottom: 100px;
+        }
+
+        hr.divider {
+            margin: 40px 0;
+        }
+
+        .feature {
+            padding: 30px;
+        }
+
+        .feature-heading {
+            font-size: 50px;
+            color: #2a6496;
+            margin-top: 120px;
+        }
+
+        .feature-heading span {
+            font-size: 20px;
+            color: #cccccc;
+        }
+
+        footer a,
+        footer a:hover {
+            color: #222;
+        }
+    </style>
 </head>
 <body>
-
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-default navbar-fixed-top navbar-inverse">
     <div class="container">
-        <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                <span class="sr-only">Toggle navigation</span>
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                    data-target="#navbar-list" aria-expanded="false">
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Logo</a>
+            <a href="#" class="navbar-brand">brand
+            </a>
         </div>
-
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <div class="collapse navbar-collapse" id="navbar-list">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-                <li><a href="#">Link</a></li>
+                <li class="active"><a href="#">Review</a></li>
+                <li><a href="#">Sketch</a></li>
                 <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+                       aria-expanded="false">Feature <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="#">Action</a></li>
-                        <li><a href="#">Another action</a></li>
-                        <li><a href="#">Something else here</a></li>
-                        <li role="separator" class="divider"></li>
-                        <li><a href="#">Separated link</a></li>
-                        <li role="separator" class="divider"></li>
-                        <li><a href="#">One more separated link</a></li>
+                        <li><a href="#tab-chrome">Chrome</a></li>
+                        <li><a href="#tab-firefox">Firefox</a></li>
+                        <li><a href="#tab-ie">Internet Explorer</a></li>
+                        <li class="divider"></li>
+                        <li><a href="#tab-opera">Opera</a></li>
+                        <li><a href="#tab-safari">Safari</a></li>
                     </ul>
                 </li>
-                <li><a href="#">About</a></li>
+                <li><a href="#" data-toggle="modal" data-target="#myModal">About</a></li>
             </ul>
             <form class="navbar-form navbar-right" action="http://www.google.com/search" method=get target="_blank">
                 <div class="form-group">
@@ -51,12 +112,204 @@
                     <button type="submit" class="btn btn-default" name=btnG>Submit</button>
                 </div>
             </form>
-        </div><!-- /.navbar-collapse -->
-    </div><!-- /.container-fluid -->
+        </div>
+    </div>
 </nav>
 
-<script src="js/jquery.min.js"></script>
+<div class="carousel slide" data-ride="carousel" id="carousel-1">
+    <ol class="carousel-indicators">
+        <li data-target="#carousel-1" data-slide-to="0" class="active"></li>
+        <li data-target="#carousel-1" data-slide-to="1"></li>
+        <li data-target="#carousel-1" data-slide-to="2"></li>
+        <li data-target="#carousel-1" data-slide-to="3"></li>
+        <li data-target="#carousel-1" data-slide-to="4"></li>
+    </ol>
+
+    <div class="carousel-inner" role="listbox">
+        <div class="item active">
+            <img src="images/chrome-800.png" alt="">
+            <div class="carousel-caption">
+                <h1>Chrome</h1>
+                <p>A fast, secure, and free web browser built for the modern web.</p>
+                <p><a href="#" class="btn btn-primary" target="_blank" role="button">Download</a></p>
+            </div>
+        </div>
+        <div class="item">
+            <img src="images/firefox-800.png" alt="">
+            <div class="carousel-caption">
+                <h1>Firefox</h1>
+                <p>Mozilla Firefox is a free and open-source web browser developed by the Mozilla Foundation.</p>
+                <p><a href="#" class="btn btn-primary" target="_blank" role="button">Download</a></p>
+            </div>
+        </div>
+        <div class="item">
+            <img src="images/ie-800.gif" alt="">
+            <div class="carousel-caption">
+                <h1>Internet Explorer</h1>
+                <p>Internet Explorer is a discontinued series of graphical web browsers developed by Microsoft.</p>
+                <p><a href="#" class="btn btn-primary" target="_blank" role="button">Download</a></p>
+            </div>
+        </div>
+        <div class="item">
+            <img src="images/opera-800.jpg" alt="">
+            <div class="carousel-caption">
+                <h1>Opera</h1>
+                <p>Opera is a fast and secure browser. Developed in Europe, used by millions around the world.</p>
+                <p><a href="#" class="btn btn-primary" target="_blank" role="button">Download</a></p>
+            </div>
+        </div>
+        <div class="item">
+            <img src="images/safari-8.jpg" alt="">
+            <div class="carousel-caption">
+                <h1>Safari</h1>
+                <p>Safari is faster and more energy efficient than other browsers. </p>
+                <p><a href="#" class="btn btn-primary" target="_blank" role="button">Download</a></p>
+            </div>
+        </div>
+    </div>
+
+    <a href="#carousel-1" class="left carousel-control" role="button" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+    </a>
+    <a href="#carousel-1" class="right carousel-control" role="button" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+    </a>
+</div>
+
+<div class="container text-center">
+    <div class="row">
+        <div class="col-md-4">
+            <img src="images/chrome-logo.png" alt="">
+            <h1>Chrome</h1>
+            <p>A fast, secure, and free web browser built for the modern web.</p>
+            <p><a href="#" class="btn btn-default" target="_blank" role="button">Download</a></p>
+        </div>
+        <div class="col-md-4">
+            <img src="images/firefox-logo.png" alt="">
+            <h1>Firefox</h1>
+            <p>Mozilla Firefox is a free and open-source web browser developed by the Mozilla Foundation.</p>
+            <p><a href="#" class="btn btn-default" target="_blank" role="button">Download</a></p>
+        </div>
+        <div class="col-md-4">
+            <img src="images/opera-logo.png" alt="">
+            <h1>Opera</h1>
+            <p>Opera is a fast and secure browser. Developed in Europe, used by millions around the world.</p>
+            <p><a href="#" class="btn btn-default" target="_blank" role="button">Download</a></p>
+        </div>
+    </div>
+    <hr class="divider">
+    <ul class="nav nav-tabs" role="tablist" id="tab-list">
+        <li class="active"><a href="#tab-chrome" role="tab" data-toggle="tab">Chrome</a></li>
+        <li><a href="#tab-firefox" role="tab" data-toggle="tab">Firefox</a></li>
+        <li><a href="#tab-ie" role="tab" data-toggle="tab">Internet Explorer</a></li>
+        <li><a href="#tab-opera" role="tab" data-toggle="tab">Opera</a></li>
+        <li><a href="#tab-safari" role="tab" data-toggle="tab">Safari</a></li>
+    </ul>
+    <div class="tab-content">
+        <div class="tab-pane active" id="tab-chrome" role="tabpanel">
+            <div class="row feature">
+                <div class="col-md-7">
+                    <h2 class="feature-heading" class="feature">Chrome</h2>
+                    <p class="lead">Google Chrome is a freeware web browser developed by Google. It was first released
+                        in 2008, for Microsoft Windows, and was later ported to Linux, macOS, iOS and Android.
+                    </p>
+                </div>
+                <div class="col-md-5">
+                    <img src="images/chrome-m.png" alt="Chrome" class="img-responsive">
+                </div>
+            </div>
+        </div>
+        <div class="tab-pane" id="tab-firefox" role="tabpanel">
+
+            <div class="row feature">
+                <div class="col-md-5">
+                    <h2 class="feature-heading">Firefox</h2>
+                    <p class="lead">Firefox is available for Windows, macOS and Linux operating systems, with its
+                        Firefox for Android available for Android (formerly Firefox for mobile, it also ran on the
+                        discontinued Firefox OS).</p>
+                </div>
+                <div class="col-md-7">
+                    <img src="images/firefox-m.png" alt="Firefox" class="img-responsive">
+                </div>
+            </div>
+        </div>
+        <div class="tab-pane" id="tab-ie" role="tabpanel">
+
+            <div class="row feature">
+                <div class="col-md-7">
+                    <h2 class="feature-heading">Internet Explorer</h2>
+                    <p class="lead">Internet Explorer is a discontinued series of graphical web browsers developed by
+                        Microsoft and included as part of the Microsoft Windows line of operating systems, starting in
+                        1995.</p>
+                </div>
+                <div class="col-md-5">
+                    <img src="images/ie-m.png" alt="IE" class="img-responsive">
+                </div>
+            </div>
+        </div>
+        <div class="tab-pane" id="tab-opera" role="tabpanel">
+
+            <div class="row feature">
+                <div class="col-md-5">
+                    <h2 class="feature-heading">Opera</h2>
+                    <p class="lead">Opera is a web browser for Windows, macOS, and Linux operating systems. It is
+                        developed by Opera Software.</p>
+                </div>
+                <div class="col-md-7">
+                    <img src="images/opera-m.png" alt="Opera" class="img-responsive">
+                </div>
+            </div>
+        </div>
+        <div class="tab-pane" id="tab-safari" role="tabpanel">
+
+            <div class="row feature">
+                <div class="col-md-7">
+                    <h2 class="feature-heading">Safari</h2>
+                    <p class="lead">Safari is a web browser developed by Apple based on the WebKit engine. First
+                        released in 2003 with Mac OS X Panther, a mobile version has been included in iOS devices since
+                        the introduction of the iPhone in 2007.</p>
+                </div>
+                <div class="col-md-5">
+                    <img src="images/safari-m.png" alt="Safari" class="img-responsive">
+                </div>
+            </div>
+        </div>
+    </div>
+    <hr class="divider">
+    <footer>
+        <p class="pull-left">Copyright &copy; 2016</p>
+        <p class="pull-right"><a href="#top">Top</a></p>
+    </footer>
+</div>
+
+<div class="modal fade" tabindex="-1" role="dialog" id="myModal">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal"><span>&times;</span></button>
+                <h4 class="modal-title">About</h4>
+            </div>
+            <div class="modal-body">
+                <p>A web browser (commonly referred to as a browser) is a software application for retrieving, presenting and traversing information resources on the World Wide Web. An information resource is identified by a Uniform Resource Identifier that may be a web page, image, video or other piece of content. Hyperlinks present in resources enable users easily to navigate their browsers to related resources.</p>
+            </div>
+            <div class="modal-footer">
+                <button class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+<script src="js/jquery-1.11.1.min.js"></script>
+<!-- Include all compiled plugins (below), or include individual files as needed -->
 <script src="js/bootstrap.min.js"></script>
-<script src="js/main.js"></script>
+<script>
+    $(document).ready(function () {
+        $("#navbar-list .dropdown-menu a").on('click', function () {
+            var href = $(this).attr("href");
+            $("#tab-list a[href='" + href + "']").tab("show");
+        });
+    });
+</script>
 </body>
 </html>
