--- a/index.html
+++ b/index.html
@@ -188,9 +188,9 @@
         <div class="collapse navbar-collapse" id="navbar-list">
             <ul class="nav navbar-nav">
                 <li><a href="#">主页</a></li>
-                <li><a href="./demo/pro/1/">记事本</a></li>
-                <li><a href="./demo/pro/2/">响应式</a></li>
-                <li><a href="./demo/pro/3/">时间轴</a></li>
+                <li><a href="./demo/pro/1/" target="_blank">记事本</a></li>
+                <li><a href="./demo/pro/2/" target="_blank">响应式</a></li>
+                <li><a href="./demo/pro/3/" target="_blank">时间轴</a></li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
                        aria-expanded="false">实例 <span class="caret"></span></a>
