--- a/index.html
+++ b/index.html
@@ -197,11 +197,11 @@
         </div>
         <div class="collapse navbar-collapse" id="navbar-list">
             <ul class="nav navbar-nav">
-                <li><a href="#">主页</a></li>
+                <li><a href="./">主页</a></li>
                 <li><a href="./demo/pro/2/" target="_blank">记事本</a></li>
                 <li><a href="./demo/pro/1/" target="_blank">响应式</a></li>
                 <li><a href="./demo/pro/3/" target="_blank">时间轴</a></li>
-                <li class="dropdown">
+                <!--<li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
                        aria-expanded="false">实例 <span class="caret"></span></a>
                     <ul class="dropdown-menu">
@@ -212,8 +212,9 @@
                         <li><a href="#tab-4th">第四章</a></li>
                         <li><a href="#tab-5th">第五章</a></li>
                     </ul>
-                </li>
+                </li>-->
                 <li><a href="https://github.com/tgxhx" target="_blank">github</a></li>
+                <li><a href="http://www.cnblogs.com/tgxh" target="_blank">blog</a></li>
             </ul>
             <form class="navbar-form navbar-right" action="http://www.google.com/search" method=get target="_blank">
                 <div class="form-group">
@@ -245,7 +246,7 @@
             <div class="carousel-caption">
                 <h1>Chrome</h1>
                 <p>A fast, secure, and free web browser built for the modern web.</p>
-                <p><a href="#" class="btn btn-primary" target="_blank" role="button">Download</a></p>
+                <p><a href="https://www.google.com/chrome/browser/features.html" class="btn btn-primary" target="_blank" role="button">Download</a></p>
             </div>
         </div>
         <div class="item">
@@ -258,7 +259,7 @@
             <div class="carousel-caption">
                 <h1>Firefox</h1>
                 <p>Mozilla Firefox is a free and open-source web browser developed by the Mozilla Foundation.</p>
-                <p><a href="#" class="btn btn-primary" target="_blank" role="button">Download</a></p>
+                <p><a href="https://www.mozilla.org/en-US/firefox/products/" class="btn btn-primary" target="_blank" role="button">Download</a></p>
             </div>
         </div>
         <div class="item">
@@ -271,7 +272,7 @@
             <div class="carousel-caption">
                 <h1>Internet Explorer</h1>
                 <p>Internet Explorer is a discontinued series of graphical web browsers developed by Microsoft.</p>
-                <p><a href="#" class="btn btn-primary" target="_blank" role="button">Download</a></p>
+                <p><a href="https://support.microsoft.com/en-us/help/18520/download-internet-explorer-11-offline-installer" class="btn btn-primary" target="_blank" role="button">Download</a></p>
             </div>
         </div>
         <div class="item">
@@ -284,7 +285,7 @@
             <div class="carousel-caption">
                 <h1>Opera</h1>
                 <p>Opera is a fast and secure browser. Developed in Europe, used by millions around the world.</p>
-                <p><a href="#" class="btn btn-primary" target="_blank" role="button">Download</a></p>
+                <p><a href="http://www.opera.com/zh-cn" class="btn btn-primary" target="_blank" role="button">Download</a></p>
             </div>
         </div>
         <div class="item">
@@ -297,7 +298,7 @@
             <div class="carousel-caption">
                 <h1>Safari</h1>
                 <p>Safari is faster and more energy efficient than other browsers. </p>
-                <p><a href="#" class="btn btn-primary" target="_blank" role="button">Download</a></p>
+                <p><a href="http://www.apple.com/safari/" class="btn btn-primary" target="_blank" role="button">Download</a></p>
             </div>
         </div>
     </div>
@@ -330,6 +331,7 @@
                                 <li><a href="./demo/d1/4/" target="_blank">限制输入内容</a></li>
                                 <li><a href="./demo/d1/5/" target="_blank">限制输入字符长度</a></li>
                                 <li><a href="./demo/d1/6/" target="_blank">评论框剩余字数</a></li>
+                                <li><a href="./demo/d1/6/" target="_blank">随机打乱数组</a></li>
                             </ul>
                         </div>
                     </div>
@@ -388,7 +390,7 @@
                                 <li><a href="./demo/d4/3/" target="_blank">导航栏</a></li>
                                 <li><a href="./demo/d4/4/" target="_blank">返回顶部（缓冲）</a></li>
                                 <li><a href="./demo/d4/5/" target="_blank">右下角广告</a></li>
-                                <li><a href="./demo/d4/6/" target="_blank">固定边栏</a></li>
+                                <li><a href="./demo/d4/6/" target="_blank">瀑布流</a></li>
                             </ul>
                         </div>
                     </div>
@@ -396,18 +398,18 @@
                 <div class="panel panel-default">
                     <div class="panel-heading">
                         <h4 class="panel-title">
-                            <a href="#collapseFour" data-toggle="collapse" data-parent="#accordion">第五章</a>
+                            <a href="#collapseFive" data-toggle="collapse" data-parent="#accordion">第五章</a>
                         </h4>
                     </div>
                     <div id="collapseFive" class="panel-collapse collapse">
                         <div class="panel-body">
                             <ul>
-                                <li><a href="./demo/d5/1/" target="_blank">1</a></li>
-                                <li><a href="./demo/d5/2/" target="_blank">2</a></li>
-                                <li><a href="./demo/d5/3/" target="_blank">1</a></li>
-                                <li><a href="./demo/d5/4/" target="_blank">2</a></li>
-                                <li><a href="./demo/d5/5/" target="_blank">1</a></li>
-                                <li><a href="./demo/d5/6/" target="_blank">2</a></li>
+                                <li><a href="./demo/d5/1/" target="_blank">固定边栏</a></li>
+                                <li><a href="./demo/d5/2/" target="_blank">展开动画</a></li>
+                                <li><a href="./demo/d5/3/" target="_blank">显示文章更多内容</a></li>
+                                <li><a href="./demo/d5/4/" target="_blank">自动展开广告</a></li>
+                                <li><a href="./demo/d5/5/" target="_blank">运动特效</a></li>
+                                <li><a href="./demo/d5/6/" target="_blank">仿豆瓣FM弹出</a></li>
                             </ul>
                         </div>
                     </div>
@@ -420,30 +422,6 @@
             <p class="pull-left">Copyright &copy; 2017</p>
             <p class="pull-right"><a href="#top">Top</a></p>
         </footer>
-    </div>
-
-    <div class="modal fade" tabindex="-1" role="dialog" id="myModal">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal"><span>&times;</span></button>
-                    <h4 class="modal-title">About</h4>
-                </div>
-                <div class="modal-body">
-                    <p>A web browser (commonly referred to as a browser) is a software application for retrieving,
-                        presenting and traversing information resources on the World Wide Web. An information resource
-                        is
-                        identified by a Uniform Resource Identifier that may be a web page, image, video or other piece
-                        of
-                        content. Hyperlinks present in resources enable users easily to navigate their browsers to
-                        related
-                        resources.</p>
-                </div>
-                <div class="modal-footer">
-                    <button class="btn btn-default" data-dismiss="modal">Close</button>
-                </div>
-            </div>
-        </div>
     </div>
 </div>
 
