--- a/resume/index.html
+++ b/resume/index.html
@@ -130,8 +130,7 @@
                                     <dd class="skills-item-description"><span>熟悉JavaScript的数据类型、继承、闭包、原型链</span></dd>
                                     <dd class="skills-item-description"><span>熟悉jQuery Library，看过jQuery源码</span></dd>
                                     <dd class="skills-item-description"><span>熟悉DOM操作、JSON、Ajax、跨域等</span></dd>
-                                    <dd class="skills-item-description"><span>了解Javascript设计模式</span></dd>
-                                    <dd class="skills-item-description"><span>了解Vue.js、AngularJS</span></dd>
+                                    <dd class="skills-item-description"><span>有Vue.js、AngularJS使用经验</span></dd>
                                     <dt class="skills-item-summary">前端工程实践</dt>
                                     <dd class="skills-item-description"><span>熟练使用Webstorm、Sublime进行前端开发</span></dd>
                                     <dd class="skills-item-description"><span>熟悉各个浏览器的调试工具</span></dd>
