--- a/lazyload/index.html
+++ b/lazyload/index.html
@@ -18,10 +18,10 @@
 <body>
     <div class="container">
         <ul>
-            <li><img src="./images/default.png" data-src="./images/img1.jpg" alt=""></li>
-            <li><img src="./images/default.png" data-src="./images/img2.jpg" alt=""></li>
-            <li><img src="./images/default.png" data-src="./images/img3.jpg" alt=""></li>
-            <li><img src="./images/default.png" data-src="./images/img4.jpg" alt=""></li>
+            <li><img class="lazyload" src="./images/default.png" data-src="./images/img1.jpg" alt=""></li>
+            <li><img class="lazyload" src="./images/default.png" data-src="./images/img2.jpg" alt=""></li>
+            <li><img class="lazyload" src="./images/default.png" data-src="./images/img3.jpg" alt=""></li>
+            <li><img class="lazyload" src="./images/default.png" data-src="./images/img4.jpg" alt=""></li>
         </ul>
     </div>
     <script src="./lazyload.js"></script>
