--- a/input/input.html
+++ b/input/input.html
@@ -11,7 +11,7 @@
 <body>
   <div style="height: 1000px;"></div>
   <input type="text" style="width: 100%;height: 40px; ">
-  <script src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
+  <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
   <script>
     var scrollHeight, //应该滚动的距离
       $body = $('body')
