--- a/input/input2.html
+++ b/input/input2.html
@@ -14,7 +14,7 @@
   <p style="height:400px;">1</p><br/>
   <p style="height:400px;">1</p><br/>
   <p style="height:400px;">1</p><br/>
-  <script src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
+  <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
   <script>
     var scrollHeight, //应该滚动的距离
       $body = $('body')
